--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261561035309592%22%3A%22pkJR306w%22%7D",
+        "value": "%7B%2261561035309592%22%3A%22pkJR306w%22%2C%2261560977412139%22%3A%229KvFoYyj%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.402Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.746Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
     },
     {
         "key": "datr",
@@ -23,53 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x620",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
-    },
-    {
-        "key": "fr",
-        "value": "0s5GtnlY7ZRIndKfw.AWXdQzWVglsiPQvt1MCyVhKtpc4.BmdF6y..AAA.0.0.BmdF9J.AWVH-I5II8g",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61561035309592",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
-    },
-    {
-        "key": "xs",
-        "value": "7%3A9BDkUPoc9R9d5Q%3A2%3A1718902601%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
     },
     {
         "key": "zsh",
@@ -77,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
     },
     {
         "key": "locale",
@@ -86,26 +41,71 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2531%3Btimestamp%3A1718902605",
+        "value": "v2%3Bclient_version%3A2531%3Btimestamp%3A1718942848",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.748Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x464",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-21T04:14:40.748Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
+    },
+    {
+        "key": "fr",
+        "value": "0s5GtnlY7ZRIndKfw.AWUB3wx6a2Glh9zY3ur0EAhgKrg.BmdF6y..AAA.0.0.BmdP4T.AWWxa1w94as",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-21T04:14:40.749Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61560977412139",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-21T04:14:40.749Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
+    },
+    {
+        "key": "xs",
+        "value": "49%3Aoc9JKNF-Ar-HYw%3A2%3A1718943252%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-21T04:14:40.749Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
     },
     {
         "key": "fbl_st",
-        "value": "100634624%3BT%3A28648376",
+        "value": "100634122%3BT%3A28649054",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.749Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
     },
     {
         "key": "vpd",
@@ -113,7 +113,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-20T16:56:24.403Z",
-        "lastAccessed": "2024-06-20T16:56:24.403Z"
+        "creation": "2024-06-21T04:14:40.749Z",
+        "lastAccessed": "2024-06-21T04:14:40.749Z"
     }
 ]
